@@ -27,11 +27,14 @@ package jdk.jfr.event.gc.collection;
 
 /**
  * @test
+ * @key jfr
  *
- *           & vm.opt.ExplicitGCInvokesConcurrent != false
- * @library /lib/testlibrary /
+ *
+ *
+ * @library /lib /
  *
  * @run main/othervm -XX:+UnlockExperimentalVMOptions -XX:-UseFastUnorderedTimeStamps -Xmx32m -Xmn8m -XX:+UseConcMarkSweepGC -XX:+ExplicitGCInvokesConcurrent jdk.jfr.event.gc.collection.TestGCEventMixedWithCMSConcurrent
+ * good debug flags:-XX:+PrintGCDetails -XX:+PrintGC
  */
 public class TestGCEventMixedWithCMSConcurrent {
     public static void main(String[] args) throws Throwable {
