@@ -27,8 +27,11 @@ package jdk.jfr.event.gc.collection;
 
 /**
  * @test
- * @library /lib/testlibrary /
- * @run main/othervm -Xmx50m -Xmn2m -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:-UseFastUnorderedTimeStamps jdk.jfr.event.gc.collection.TestYoungGarbageCollectionEventWithG1New
+ * @key jfr
+ *
+ *
+ * @library /lib /
+ * @run main/othervm -Xmx50m -Xmn2m -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:-UseFastUnorderedTimeStamps -XX:+PrintGCDetails -XX:+PrintGC jdk.jfr.event.gc.collection.TestYoungGarbageCollectionEventWithG1New
  */
 public class TestYoungGarbageCollectionEventWithG1New {
 
