@@ -24,13 +24,15 @@
  */
 
 package jdk.jfr.event.gc.refstat;
-import jdk.testlibrary.jfr.GCHelper;
+import jdk.test.lib.jfr.GCHelper;
 
 /**
  * @test
- *           & vm.opt.ExplicitGCInvokesConcurrent != true
- * @library /lib/testlibrary /
- * @run main/othervm  -XX:+UnlockExperimentalVMOptions -XX:-UseFastUnorderedTimeStamps -XX:+UseConcMarkSweepGC jdk.jfr.event.gc.refstat.TestRefStatEventWithCMSMarkSweep
+ * @key jfr
+ *
+ *
+ * @library /lib /
+ * @run main/othervm  -XX:+UnlockExperimentalVMOptions -XX:-UseFastUnorderedTimeStamps -XX:+PrintGCDetails -XX:+PrintGC -XX:+UseConcMarkSweepGC jdk.jfr.event.gc.refstat.TestRefStatEventWithCMSMarkSweep
  */
 public class TestRefStatEventWithCMSMarkSweep {
     public static void main(String[] args) throws Exception {
